<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backgroundGrey">

        <Button
            android:id="@+id/weaponsB"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/fs_sinclair_bold"
            android:text="@string/weapons"
            android:textColor="@color/backgroundBlack"
            android:textSize="19sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/statsB"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/stats"
            android:textSize="19sp"
            android:backgroundTint="@color/lightgrey"
            android:fontFamily="@font/fs_sinclair_bold"

            android:textColor="@color/backgroundBlack"

            app:cornerRadius="0dp"/>

        <Button
            android:id="@+id/warB"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/war"
            android:textSize="19sp"
            android:fontFamily="@font/fs_sinclair_bold"
            android:textColor="@color/backgroundBlack"
            app:cornerRadius="0dp"/>
    </LinearLayout>

</FrameLayout>