<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    android:backgroundTint="@color/cardview_light_background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/searchET"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/search_for_a_weapon"
        android:inputType="text"
        android:textColorHint="@color/accentBlue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navFragment"
        android:name="com.example.mobileproject.NavFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ExpandableListView
        android:id="@+id/weaponsLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/searchB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="@+id/searchET"
        app:layout_constraintStart_toEndOf="@+id/searchET"
        app:layout_constraintTop_toTopOf="@+id/searchET" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchB">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/offChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/offensive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/defChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/defensive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/supChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/supply" />

            <com.google.android.material.chip.Chip
                android:id="@+id/misChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/mission" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>