<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/backgroundBlack"
    android:backgroundTint="@color/backgroundBlack">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navFragment"
        android:name="com.example.mobileproject.NavFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fs_sinclair_bold"
        android:text="@string/player_stats"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/wins"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/plays"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/bugs"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/automations"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/illuminates"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/friendly_kills"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/fired"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/hits"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/deaths"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/revives"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/success_rate"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/accuracy"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/wins"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plays"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wins" />

    <TextView
        android:id="@+id/bugKills"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plays" />

    <TextView
        android:id="@+id/automationKills"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugKills" />

    <TextView
        android:id="@+id/illuminateKills"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/automationKills" />

    <TextView
        android:id="@+id/friendlyKills"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illuminateKills" />

    <TextView
        android:id="@+id/bulletsFired"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendlyKills" />

    <TextView
        android:id="@+id/bulletsHit"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulletsFired" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulletsHit" />

    <TextView
        android:id="@+id/revives"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deaths" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/missionSuccessRate" />

    <TextView
        android:id="@+id/missionSuccessRate"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"
        android:backgroundTint="@color/backgroundGrey"
        android:text="@string/placeholder2"
        android:textAlignment="center"
        android:textAppearance="@style/ChipTextAppearance__Roboto"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revives" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/fs_sinclair_medium"
        android:text="@string/update"
        android:textColor="@color/backgroundBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />


</androidx.constraintlayout.widget.ConstraintLayout>